--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@ As a former executive (Budget and Implementation Committee) of Junior Chambers I
 
 
                 </div>
-                <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 pt-5">
+                <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 pt-5 aside" >
                   <div class="row mt-5">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                     <div class="card">
