--- a/getinvolved.html
+++ b/getinvolved.html
@@ -288,7 +288,7 @@ It is estimated that over 150 persons will be directly impacted economically whi
     
 
 
-                <div class="col-xl-4 pt-5">
+                <div class="col-xl-4 pt-5 aside">
                   <div class="row mt-5">
                     <div class="card">
   <div class="card-body">
