--- a/blog.html
+++ b/blog.html
@@ -179,7 +179,16 @@
     
 
 
-                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mt-5">
+                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mt-5 aside">
+                  <div class="two-dot">
+                    <a href="#top" class="dot dot-filled">
+                      <i class="fa fa-circle" aria-hidden="true"></i>
+                     
+                    </a>
+                    <a href="#bottom" class="dot dot-filled">
+                      <i class="fa fa-circle" aria-hidden="true"></i>
+                    </a>
+                  </div>
                   <div class="row mt-5">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mt-4">
                     <div class="card">
@@ -288,6 +297,7 @@ Team Lead/Partnership Manager October 8, 2015 </p>
 
 
 
+</div>
 
 
 
@@ -307,8 +317,7 @@ Team Lead/Partnership Manager October 8, 2015 </p>
 
 
 
-
-<footer class="sticky ">
+<footer class="sticky" id="bottom">
     <div class="footer-content">
 <div class="container">
 
